project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project
spec:
  selector:
    matchLabels:
      app: todo-project
  template:
    metadata:
      labels:
        app: todo-project
    spec:
      containers:
        - name: todo-backend
          image: PROJECT/BACKEND-IMAGE
          resources:
            requests:
              memory: "256Mi"
            limits:
              cpu: "150m"
              memory: "512Mi"
        - name: todo-frontend
          image: PROJECT/FRONTEND-IMAGE
          resources:
            requests:
              memory: "256Mi"
            limits:
              cpu: "150m"
              memory: "512Mi"
