project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-project-svc
spec:
  type: ClusterIP
  selector:
    app: todo-project
  ports:
    - name: backend
      port: 1234
      protocol: TCP
      targetPort: 3000
    - name: frontend
      port: 2345
      protocol: TCP
      targetPort: 4000
